# marquee

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
.github/workflows/: docker.yml
backend/: pyproject.toml
backend/marquee/: __init__.py  __main__.py  config.py  downloader.py  jellyfin.py  models.py  pipeline.py  scheduler.py  store.py  watchdog.py
backend/marquee/api/: app.py  routes.py  sse.py
backend/marquee/tmdb/: __init__.py  client.py  curator.py
backend/tests/: test_cli.py  test_config.py  test_curator.py  test_downloader.py  test_jellyfin.py  test_main.py  test_models.py  test_pipeline.py  test_scheduler.py  test_spa_static.py  test_store.py  test_tmdb_client.py  test_version.py  test_watchdog.py
backend/tests/api/: test_api.py  test_sse.py  test_watchdog_routes.py
backend/tests/golden/: movie.nfo
docs/superpowers/plans/: 2026-07-11-marquee-0-interface-contract.md  2026-07-11-marquee-1-backend-core.md  2026-07-11-marquee-2-backend-pipeline.md  2026-07-11-marquee-3-frontend-and-ship.md
docs/superpowers/specs/: 2026-07-11-marquee-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  main.tsx  styles.css  types.ts
frontend/src/components/: ActivityLog.test.tsx  ActivityLog.tsx  ConnectionStatus.test.tsx  ConnectionStatus.tsx  CountdownBadge.test.tsx  CountdownBadge.tsx  MovieCard.test.tsx  MovieCard.tsx  SettingsForm.test.tsx  SettingsForm.tsx  StatusBar.test.tsx  StatusBar.tsx  StatusPill.test.tsx  (+5 more)
(+4 files in other folders)
