[project]
name = "marquee"
version = "0.1.0"
description = "Self-hosted Coming-Soon trailer library for Jellyfin, driven by TMDB."
requires-python = ">=3.13"
dependencies = [
  "httpx>=0.27,<1.0",
  # Pinned to the audited pre-httpx2 web stack. Starlette 1.3.x (2026) steers
  # TestClient toward "httpx2", a typosquat (author=None, no homepage, copies
  # httpx's tagline). FastAPI 0.115.x + Starlette 0.41.x use plain httpx.
  "fastapi>=0.115,<0.116",
  "starlette>=0.40,<0.42",
  "uvicorn[standard]>=0.30,<1.0",
  "apscheduler>=3.10,<4",
  "yt-dlp[default]>=2024.8.6",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "respx>=0.21",
  "ruff>=0.5",
]

[project.scripts]
marquee = "marquee.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["marquee*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py313"
